ansible/roles/kubernetes-dashboard/files/kubernetes-dashboard-ingress.yml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: kubernetes-dashboard-web
#   namespace: kubernetes-dashboard
# spec:
#   entryPoints:
#     - websecure # Traefik HTTPS entrypoint
#   routes:
#     - kind: Rule
#       match: Host(`kubernetes.localhost`)
#       priority: 10
#       services:
#         - name: kubernetes-dashboard-web
#           port: 8000
#   tls:
#     certResolver: default # Traefik will handle TLS automatically
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
#
# TODO: Fix routing/proxy error 
# When doing internally (the output is a crsf token json - correct):
# kubectl -n kubernetes-dashboard run curltest --rm -it \
#   --image=curlimages/curl --restart=Never -- \
#   curl -vk https://kubernetes-dashboard-kong-proxy.kubernetes-dashboard.svc.cluster.local:443/api/v1/csrftoken/login
# But when doing from host (output xml (probably dashboard web page) instead of csrf json - incorrect):
#curl -vk https://kubernetes.localhost/api/v1/csrftoken/login
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.serversscheme: https
spec:
  ingressClassName: traefik
  rules:
  - host: kubernetes.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard-kong-proxy
            port:
              number: 443
---
